# MiniPex

./: main.py  pyproject.toml
minipex/: __init__.py  __main__.py  console.py  debug.py  util.py
