[tool.poetry]
name = "minipex"
version = "0.1.0"
description = ""
authors = ["Arpan Mahanty <edumate696@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
poetry-version = "^0.1.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
